# sta141c-final-proj

./: .gitignore  ANN alz.ipynb  ANN.ipynb  ANN_alz.py  EDA.ipynb  EDA_ADD.ipynb  GPT-heart-SVM.md  Logistic reg alz.ipynb  Logistic reg.ipynb  Logistic reg_alz_visualized.html  Logistic reg_alz_visualized.ipynb  README.md  Random Forest feature selection.ipynb  Random Forest.ipynb  SVM 2.ipynb  SVM.ipynb  SVM_alz.html  SVM_alz.ipynb  pyproject.toml
data/: test.csv  train.csv
