[project]
name = "sta141c-final"
version = "0.1.0"
description = ""
authors = [
  {name = "Andrew"}
]
readme = "README.md"
requires-python = "~3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false